fix claim page button misalignment

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -34,6 +34,10 @@ body {
   margin-left: $grid-gutter;
 }
 
+.mrg1 {
+  margin-right: $grid-gutter;
+}
+
 
 //
 // Header
